user courses api + policy set up + swagger set up
